ripples and first dot analyses

--- a/preprocessing/BJH016/scripts/BJH016_preprocessing_data.ipynb
+++ b/preprocessing/BJH016/scripts/BJH016_preprocessing_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ae4a5017-ba0a-4694-8cba-eefaa497de79",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "818abc23-824d-4a4f-b98c-581765afbcd8",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_493507/3702585054.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "/tmp/ipykernel_28621/3702585054.py:4: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
      ]
     },
@@ -547,14 +547,15 @@
       "No baseline correction applied\n",
       "0 projection items activated\n",
       "Overwriting existing file.\n",
-      "Loading data for 452 events and 42001 original time points ...\n"
+      "Loading data for 1 events and 42001 original time points ...\n",
+      "Splitting into 7 parts\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_493507/3702585054.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_clean_pres-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "/tmp/ipykernel_28621/3702585054.py:18: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_clean_pres-locked_ieeg.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  epoched_data.save(f\"{preproc_data_dir}/{subject}_bp_clean_pres-locked_ieeg.fif\", overwrite = True, split_size = '1.9GB')\n"
      ]
     },
@@ -562,9 +563,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 bad epochs dropped\n",
-      "Loading data for 1 events and 42001 original time points ...\n",
-      "Splitting into 7 parts\n",
       "Loading data for 65 events and 42001 original time points ...\n",
       "Loading data for 65 events and 42001 original time points ...\n",
       "Loading data for 65 events and 42001 original time points ...\n",
@@ -1130,6 +1128,259 @@
   },
   {
    "cell_type": "markdown",
+   "id": "040817fd-9b90-4bde-bcc7-2c4cb5e0a3e1",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## First Dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33883500-b298-46c2-a9e3-06ac04d326a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neural_trial_numeric</th>\n",
+       "      <th>TrialType</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>sample_before</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>94500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>111300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>135800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>155900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>192700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>445</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5768200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>446</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5780700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>447</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5791400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>448</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5809600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>449</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5829700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>407 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     neural_trial_numeric  TrialType   sample  sample_before  event\n",
+       "0                       1          8    94500              0      1\n",
+       "1                       2         11   111300              0      1\n",
+       "2                       4         10   135800              0      1\n",
+       "3                       5         15   155900              0      1\n",
+       "4                       7         20   192700              0      1\n",
+       "..                    ...        ...      ...            ...    ...\n",
+       "402                   445         17  5768200              0      1\n",
+       "403                   446         15  5780700              0      1\n",
+       "404                   447         18  5791400              0      1\n",
+       "405                   448         19  5809600              0      1\n",
+       "406                   449         13  5829700              0      1\n",
+       "\n",
+       "[407 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Load Behavioral Data ##\n",
+    "first_dot_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_first_dot_events.csv\")\n",
+    "first_dot_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ae78b220-d2d8-410d-a100-160d5956ee87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create events\n",
+    "first_dot_data = first_dot_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "482b34e5-87c6-4263-8d1e-caac13447a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2077999 =      0.000 ...  1038.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data-1.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2072078/2964015507.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Range : 2078000 ... 4155999 =   1039.000 ...  2077.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_data-2.fif...\n",
+      "    Range : 4156000 ... 5901899 =   2078.000 ...  2950.950 secs\n",
+      "Ready.\n",
+      "Not setting metadata\n",
+      "407 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "Loading data for 1 events and 20001 original time points ...\n",
+      "Splitting into 3 parts\n",
+      "Loading data for 136 events and 20001 original time points ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2072078/2964015507.py:14: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH016/ieeg/BJH016_bp_raw_clean_first_dot_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for 136 events and 20001 original time points ...\n",
+      "Loading data for 135 events and 20001 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "\n",
+    "# epoch the data\n",
+    "first_dot_epochs = mne.Epochs(bp_raw_fif, first_dot_data, \n",
+    "                          event_id = 1, tmin = -5, tmax =5, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# # save the data\n",
+    "first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92278f0d-0253-417d-aa04-be6047ba33a4",
    "metadata": {},
    "source": [
@@ -1365,9 +1616,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "conda-env-anaconda3-ieeg_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
