--- a/preprocessing/BJH021/scripts/BJH021_preprocessing.ipynb
+++ b/preprocessing/BJH021/scripts/BJH021_preprocessing.ipynb
@@ -1149,6 +1149,255 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ec07961-3d08-43df-832e-8fa9273f16f3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## First Dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b83789c7-d4ca-4ac1-a8b9-22043b30e96a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neural_trial_numeric</th>\n",
+       "      <th>TrialType</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>sample_before</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>55600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "      <td>100100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "      <td>123800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>138900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>233</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2986200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>234</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2997900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>235</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3009200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>237</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3027200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>238</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3040100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>227 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     neural_trial_numeric  TrialType   sample  sample_before  event\n",
+       "0                       2         12    55600              0      1\n",
+       "1                       3          1    74700              0      1\n",
+       "2                       4         14   100100              0      1\n",
+       "3                       6         18   123800              0      1\n",
+       "4                       7         17   138900              0      1\n",
+       "..                    ...        ...      ...            ...    ...\n",
+       "222                   233         18  2986200              0      1\n",
+       "223                   234         19  2997900              0      1\n",
+       "224                   235          6  3009200              0      1\n",
+       "225                   237         13  3027200              0      1\n",
+       "226                   238          3  3040100              0      1\n",
+       "\n",
+       "[227 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Load Behavioral Data ##\n",
+    "first_dot_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_first_dot_events.csv\")\n",
+    "first_dot_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d14028fa-fc45-46bf-88c6-674dadf18525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create events\n",
+    "first_dot_data = first_dot_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a190341-e93e-4812-a725-e3b1760241e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 2225999 =      0.000 ...  1112.999 secs\n",
+      "Ready.\n",
+      "Opening raw data file /home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data-1.fif...\n",
+      "    Range : 2226000 ... 3156499 =   1113.000 ...  1578.249 secs\n",
+      "Ready.\n",
+      "Not setting metadata\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2075300/1189739071.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "227 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2075300/1189739071.py:14: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/BJH021/ieeg/BJH021_bp_raw_clean_first_dot_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for 1 events and 18001 original time points ...\n",
+      "Splitting into 2 parts\n",
+      "Loading data for 114 events and 18001 original time points ...\n",
+      "Loading data for 113 events and 18001 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "\n",
+    "# epoch the data\n",
+    "first_dot_epochs = mne.Epochs(bp_raw_fif, first_dot_data, \n",
+    "                          event_id = 1, tmin = -3, tmax =6, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# # save the data\n",
+    "first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c206a94e-5c05-459b-9e3f-a4b14f295d73",
@@ -1159,9 +1408,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "conda-env-anaconda3-ieeg_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
