--- a/preprocessing/LL13/scripts/LL13_preprocessing.ipynb
+++ b/preprocessing/LL13/scripts/LL13_preprocessing.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d7d0fa71-30b2-4684-ad96-1e5b7c05a39a",
    "metadata": {},
    "outputs": [],
@@ -848,6 +848,238 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02eb93ce-63e7-429d-afea-b4a7f366c206",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## First Dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "223192f2-96e1-4eaa-ada5-7084481c5bb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neural_trial_numeric</th>\n",
+       "      <th>TrialType</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>sample_before</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>25241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>28672</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33331</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>39142</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>51916</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>234</td>\n",
+       "      <td>18</td>\n",
+       "      <td>850790</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>235</td>\n",
+       "      <td>19</td>\n",
+       "      <td>854732</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>236</td>\n",
+       "      <td>20</td>\n",
+       "      <td>857804</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>237</td>\n",
+       "      <td>9</td>\n",
+       "      <td>862848</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>238</td>\n",
+       "      <td>16</td>\n",
+       "      <td>865484</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>221 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     neural_trial_numeric  TrialType  sample  sample_before  event\n",
+       "0                       0          7   25241              0      1\n",
+       "1                       1         15   28672              0      1\n",
+       "2                       2          1   33331              0      1\n",
+       "3                       3         11   39142              0      1\n",
+       "4                       7          3   51916              0      1\n",
+       "..                    ...        ...     ...            ...    ...\n",
+       "216                   234         18  850790              0      1\n",
+       "217                   235         19  854732              0      1\n",
+       "218                   236         20  857804              0      1\n",
+       "219                   237          9  862848              0      1\n",
+       "220                   238         16  865484              0      1\n",
+       "\n",
+       "[221 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Load Behavioral Data ##\n",
+    "first_dot_data = pd.read_csv(f\"{raw_data_dir}/behave/{subject}_first_dot_events.csv\")\n",
+    "first_dot_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49c0f5ab-bde7-4bc7-910b-714e18339ba5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create events\n",
+    "first_dot_data = first_dot_data[['sample', 'sample_before', 'event']].copy().to_numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bbdf159e-57c5-4ad2-bceb-7b45eeff743a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening raw data file /home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_data.fif...\n",
+      "    Range : 0 ... 901099 =      0.000 ...  1759.959 secs\n",
+      "Ready.\n",
+      "Not setting metadata\n",
+      "221 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2100749/1189739071.py:2: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_data.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+      "/tmp/ipykernel_2100749/1189739071.py:14: RuntimeWarning: This filename (/home/brooke/pacman/preprocessing/LL13/ieeg/LL13_bp_raw_clean_first_dot_events.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "  first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data for 1 events and 4609 original time points ...\n",
+      "Loading data for 221 events and 4609 original time points ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load data \n",
+    "bp_raw_fif = mne.io.Raw(f\"{preproc_data_dir}/{subject}_bp_raw_clean_data.fif\")\n",
+    "\n",
+    "# only epoch good channels\n",
+    "channels_of_interest =  [x for x in bp_raw_fif.info['ch_names'] if x not in bp_raw_fif.info['bads']]\n",
+    "\n",
+    "\n",
+    "# epoch the data\n",
+    "first_dot_epochs = mne.Epochs(bp_raw_fif, first_dot_data, \n",
+    "                          event_id = 1, tmin = -3, tmax =6, \n",
+    "                          baseline = None, picks = channels_of_interest,\n",
+    "                             reject_by_annotation = False)\n",
+    "# # save the data\n",
+    "first_dot_epochs.save(f\"{preproc_data_dir}/{subject}_bp_raw_clean_first_dot_events.fif\", overwrite = True, split_size = '1.9GB')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ba28a25e-a34b-49f4-b3a6-c1f15942eab4",
    "metadata": {},
    "source": [
@@ -899,9 +1131,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "Python [conda env:anaconda3-ieeg_analysis]",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "conda-env-anaconda3-ieeg_analysis-py"
   },
   "language_info": {
    "codemirror_mode": {
