--- a/script_templates/preprocessing.ipynb
+++ b/script_templates/preprocessing.ipynb
@@ -338,9 +338,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ieeg_analysis] *",
+   "display_name": "Python [conda env:ieeg_analysis2] *",
    "language": "python",
-   "name": "conda-env-ieeg_analysis-py"
+   "name": "conda-env-ieeg_analysis2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
